2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JCheckBoxMenuItem/constructors.java
	(testConstructor1): Added 'focusable' check.
	(testConstructor2): Added 'focusable' check.
	(testConstructor4): Added 'focusable' check.
	(testConstructor6): Added 'focusable' check.
	(testConstructor8): Added 'focusable' check.
	(testConstructor10): Added 'focusable' check.
	(testConstructor12): Added 'focusable' check.

2006-06-15  Vivek Lakshmanan  <vivekl@redhat.com>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java: Add
	proper tag information.
	(testInitWithParameterSpec): New method.
	(test): Add call to new test for init with null AlgorithmParameterSpec.

2006-06-14  Vivek Lakshmanan  <vivekl@redhat.com>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java: New test. 

2006-06-14  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Polygon/getPathIterator.java: New test.

2006-06-14  Anthony Balkissoon  <abalkiss@redhat.com>

	* .cvsignore: Removed .ecjOut and .ecjErr from this file.
	* Harness.java: 
	(lastFailingCompile): New field.
	(numCompileFailsInFolder): New field.
	(showCompilationErrors): Removed this field.
	(main): Removed the handling of showCompilationErrors.
	(setupCompiler): Changed ecjWriterOut and ecjWriterErr to use custom 
	PrintWriters instead of writing to .ecjOut and .ecjErr.
	(getClasspathInstallString): Do not look for the property in 
	config.java, the -with-bootclasspath option has been removed from
	configuration.
	(printHelpMessage): Changed the "exceptions" message to indicate that
	full stack traces are now printed by default.
	(compileFolder): Removed the code that reads the compiler output and
	parses it, this is now done in the custom PrintWriter used by the 
	compiler.
	(compileTest): Likewise.
	(problemsString): Removed this method.
	(isCompileSummary): New method.
	(CompilerErrorWriter): New class.